# 2048

./: Board.cpp  Board.h  CMakeLists.txt  Colors.cpp  Colors.h  ColorsEnum.h  KeyEvents.cpp  KeyEvents.h  P2048.cpp  P2048.h  Position.cpp  Position.h  README.md  Tile.cpp  Tile.h  main2048.cpp
